now structed pdf from using the DO latex server

--- a/src/templates/proposal.tex
+++ b/src/templates/proposal.tex
@@ -29,7 +29,7 @@
 \noindent
 \begin{minipage}[c]{0.20\textwidth}
   \centering
-  \includegraphics[width=0.75\linewidth]{C:/Users/DELL/Documents/Envimaster.png}
+  \includegraphics[width=0.75\linewidth]{images/Envimaster.png}
 \end{minipage}%
 \hspace{0.6cm}
 \begin{minipage}[c]{0.75\textwidth}
