services in pdf ui v2

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -6,6 +6,7 @@
 \usepackage{helvet}
 \usepackage{tabularx}
 \usepackage{array}
+\usepackage{longtable}
 
 \renewcommand{\familydefault}{\sfdefault}
 
@@ -50,6 +51,9 @@
 
 % Flex column that wraps text (for tabularx)
 \newcolumntype{Y}{>{\raggedright\arraybackslash}X}
+
+% Multi-line header column with automatic height adjustment
+\newcolumntype{Z}{>{\raggedright\arraybackslash\small}p}
 
 % ====== SERVICES HELPER MACROS ====================================
 
@@ -226,24 +230,32 @@
 \fcolorbox{emred}{emred}{%
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
-    \bfseries\footnotesize\textcolor{white}{PRODUCTS}%
+    \bfseries\small\textcolor{white}{PRODUCTS}%
   }%
 }
 
 \vspace{0.2em}
 
-%==================== PRODUCTS TABLE (dynamic, wrapping) ============
+%==================== PRODUCTS TABLE (dynamic, page-breaking) ============
 
-\scriptsize
-\setlength{\tabcolsep}{2pt}
-\renewcommand{\arraystretch}{1.15}
+\small
+\setlength{\tabcolsep}{4pt}
+\renewcommand{\arraystretch}{1.4}
 
-\noindent
-\begin{tabularx}{\textwidth}{|{{{productsColSpecLatex}}}|}
+% Use longtable for automatic page breaking
+\begin{longtable}{|{{{productsColSpecLatex}}}|}
   \hline
   {{{productsHeaderRowLatex}}}
+  \endfirsthead
+
+  % Header for subsequent pages
+  \hline
+  {{{productsHeaderRowLatex}}}
+  \endhead
+
+  % Body rows
   {{{productsBodyRowsLatex}}}
-\end{tabularx}
+\end{longtable}
 
 %==================== SERVICES TITLE BAR ============================
 
@@ -253,7 +265,7 @@
 \fcolorbox{emred}{emred}{%
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
-    \bfseries\footnotesize\textcolor{white}{SERVICES}%
+    \bfseries\small\textcolor{white}{SERVICES}%
   }%
 }
 
