Added the service agreemnt linked in the pdf

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -6,6 +6,7 @@
 \usepackage{helvet}
 \usepackage{tabularx}
 \usepackage{array}
+\usepackage{amssymb} % ✅ NEW: For checkbox symbols (\square, \checkmark)
 
 \renewcommand{\familydefault}{\sfdefault}
 
