--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -86,6 +86,10 @@
 \newlength{\serviceGap}
 \setlength{\serviceGap}{1.1em}
 
+% wider gap for long labels
+\newlength{\serviceGapWide}
+\setlength{\serviceGapWide}{1.6em}
+
 \newcommand{\serviceSection}[1]{%
   {\bfseries\normalsize\textcolor{emred}{#1}\par}%
   \vspace{0.7em}%
