gaps and header size are getting good now

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -348,7 +348,8 @@
 \fcolorbox{emred}{emred}{%
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
-    \bfseries\normalsize\textcolor{white}{PRODUCTS}% ✅ Changed from \footnotesize to \normalsize
+    \bfseries\Large\textcolor{white}{PRODUCTS}% ✅ Changed from \footnotesize to \normalsize
+    \vspace{0.28em}%
   }%
 }
 
@@ -381,7 +382,8 @@
 \fcolorbox{emred}{emred}{%
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
-    \bfseries\normalsize\textcolor{white}{SERVICES}% ✅ Changed from \footnotesize to \normalsize
+    \bfseries\Large\textcolor{white}{SERVICES}% ✅ Changed from \footnotesize to \normalsize
+    \vspace{0.28em}%
   }%
 }
 
