sanipod and rpm issue fixed

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -12,7 +12,7 @@
 \renewcommand{\familydefault}{\sfdefault}
 
 % ---- Colors ----
-\definecolor{emred}{RGB}{228,0,43}
+\definecolor{emred}{RGB}{191, 0, 0}
 \definecolor{linegray}{RGB}{120,120,120} % ✅ DARKER gray for better visibility
 \definecolor{totalcolor}{RGB}{120,120,120} % dark gray for totals
 
