pdf template change 1

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -340,20 +340,20 @@
   \end{tabularx}
 \end{minipage}
 
-\vspace{1.5em}
+\vspace{0.8em}
 
 %==================== PRODUCTS TITLE BAR ============================
 
 \noindent
-\fcolorbox{emred}{emred}{%
+\fcolorbox{black}{emred}{%
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
-    \bfseries\Large\textcolor{white}{PRODUCTS}% ✅ Changed from \footnotesize to \normalsize
-    \vspace{0.28em}%
+    {\bfseries\fontsize{1.1em}{1.9em}\selectfont\textcolor{white}{PRODUCTS}}% ✅ Changed from \footnotesize to \normalsize
+    \vspace{0.1em}%
   }%
 }
 
-\vspace{0.2em}
+% \vspace{0.1em}
 
 %==================== PRODUCTS TABLE (dynamic, wrapping) ============
 
