decreased products space

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -351,12 +351,11 @@
     {\bfseries\fontsize{1.1em}{1.9em}\selectfont\textcolor{white}{PRODUCTS}}% ✅ Changed from \footnotesize to \normalsize
     \vspace{0.1em}%
   }%
-}
-
-% \vspace{0.1em}
-
+}%  
+\vspace{0.5em}%
 %==================== PRODUCTS TABLE (dynamic, wrapping) ============
 
+\setlength{\LTpre}{0pt}%
 \small % ✅ Changed from \scriptsize to \small for better readability
 \setlength{\tabcolsep}{2pt}
 \renewcommand{\arraystretch}{1.5} % ✅ Changed from 1.15 to 1.5 for more top/bottom padding
