pdf product headers background colour change

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -2,7 +2,8 @@
 
 \usepackage[top=1cm,bottom=1cm,left=1cm,right=1cm]{geometry}
 \usepackage{graphicx}
-\usepackage{xcolor}
+\usepackage[table]{xcolor}
+\usepackage{colortbl}
 \usepackage{helvet}
 \usepackage{tabularx}
 \usepackage{longtable} % ✅ NEW: For tables that break across pages
