added underline service names

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -98,7 +98,7 @@
 \setlength{\serviceGapWide}{8em}
 
 \newcommand{\serviceSection}[1]{%
-  {\bfseries\normalsize\textcolor{emred}{#1}\par}%
+  {\bfseries\normalsize\textcolor{emred}{\underline{#1}}\par}%
   \vspace{0.7em}%
 }
 
