added blue colour for refresh power scrub

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -18,6 +18,7 @@
 \definecolor{emred}{RGB}{191, 0, 0}
 \definecolor{linegray}{RGB}{0,0,0} % ✅ CUSTOM fill-in blank color
 \definecolor{totalcolor}{RGB}{120,120,120} % dark gray for totals
+\definecolor{serviceHeaderBlue}{RGB}{37,99,235}
 
 \newlength{\filledlineheight}%
 \setlength{\filledlineheight}{0.9pt} % thicker underline for fill-in blanks
