added fontsize for the service headers

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -102,7 +102,7 @@
 \setlength{\serviceGapWide}{8em}
 
 \newcommand{\serviceSection}[1]{%
-  {\bfseries\normalsize\textcolor{emred}{\underline{#1}}\par}%
+  {\bfseries\fontsize{1.2em}{1.5em}\selectfont\textcolor{emred}{\underline{#1}}\par}%
   \vspace{0.7em}%
 }
 
@@ -360,7 +360,7 @@
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
     \vspace{0.2em}%
-    {\bfseries\fontsize{1.2em}{3.8em}\selectfont\textcolor{white}{PRODUCTS}}% ✅ Changed from \footnotesize to \normalsize
+    {\bfseries\fontsize{1.2em}{1.6em}\selectfont\textcolor{white}{PRODUCTS}}% ✅ Changed from \footnotesize to \normalsize
     \vspace{0.2em}%
   }%
 }%  
@@ -394,7 +394,7 @@
   \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
     \centering
     \vspace{0.2em}%
-    {\bfseries\fontsize{1.2em}{3.8em}\selectfont\textcolor{white}{SERVICES}}% ✅ Changed from \footnotesize to \normalsize
+    {\bfseries\fontsize{1.2em}{1.6em}\selectfont\textcolor{white}{SERVICES}}% ✅ Changed from \footnotesize to \normalsize
     \vspace{0.2em}%
   }%
 }%  
@@ -470,3 +470,4 @@
 % \noindent\textcolor{emred}{\rule{\textwidth}{0.4pt}}
 
 \end{document}
+
