removed $ symbol for calc fields

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -297,7 +297,7 @@
   \noindent\normalsize
   \mbox{#1}%
   \hspace{0.2em}%
-  \smallfilledshort{#2}\hspace{0.15em}@\hspace{0.15em}\smallfilledshort{#3}\hspace{0.15em}=\hspace{0.15em}\$\smallfilledshort{#4}\par
+  \smallfilledshort{#2}\hspace{0.15em}@\hspace{0.15em}\smallfilledshort{#3}\hspace{0.15em}=\hspace{0.15em}\smallfilledshort{#4}\par
   \vspace{0.5em}%
 }
 
